load icon for resource only once on appear
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7019 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -32,7 +32,7 @@
 				
 				resourceVO = value as ResourceVO;
 
-				if (!creationCompleted || !visible)
+				if (!creationCompleted)
 					return;
 				
 				addContentElement();
@@ -48,6 +48,9 @@
 			
 			private function addContentElement():void
 			{
+				if (!visible)
+					return;
+				
 				if (itemElement && contains(itemElement)) {
 					if (resourceVO && (itemElement is ListItemNotEmptyContent))
 					{
@@ -104,9 +107,6 @@
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
 				creationCompleted = true;
-				
-				if (!visible)
-					return;
 				
 				addContentElement();
 			}
