git-svn-id: http://svn.vdombox.ru/flextools/trunk@7022 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
@@ -100,7 +100,7 @@
 	</s:Group>
 	
 	
-	<s:Button height="19" label="..." fontSize="8" width="28"
-			   cornerRadius="0" textAlignLast="center"
+	<mx:Button height="19" label="..." width="22"
+			   cornerRadius="0" paddingLeft="2" paddingRight="2"
 			   click="openWindow()" />
 </s:HGroup>
