--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ColorPicker.mxml
@@ -77,12 +77,15 @@
 			}
 		]]>
 	</fx:Script>
-	<s:Group width="100%" height="100%">
+	<s:HGroup width="100%" height="100%" verticalAlign="middle">
 		<s:Rect width="100%" height="100%" id="rectColorPicker">
 			<s:fill>
 				<s:SolidColor color="{_colorInNumber}"/>
 			</s:fill>
 		</s:Rect>
-	</s:Group>
+		
+		<mx:Image source="@Embed('icons/colorpicker.png')" smoothBitmapContent="true"/>
+		
+	</s:HGroup>
 
 </mx:Canvas>
