--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -31,15 +31,15 @@
 
 	<mx:VDividedBox height="100%" width="228">
 		
-		<panels:ObjectsTreePanel id="objectsTreePanel"
-								 width="100%"
-								 backgroundAlpha="1" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
-								 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
-
 		<panels:ObjectAttributesPanel id="objectAttributesPanel"
-									  width="100%"
+									  width="100%" height="60%"
 									  backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 									  title="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_title') }" borderAlpha="0" borderVisible="false"/>
+		
+		<panels:ObjectsTreePanel id="objectsTreePanel"
+								 width="100%" height="40%"
+								 backgroundAlpha="1" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
+								 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
 	
 
 	</mx:VDividedBox>
