--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/PageRendererSkin.mxml
@@ -2,7 +2,7 @@
 <s:SparkSkin xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
-			 xmlns:s="library://ns.adobe.com/flex/spark" top="0" bottom="0" left="0" right="0" 
+			 xmlns:s="library://ns.adobe.com/flex/spark" width="100%" height="100%"
 			 resize="trace('PageSkin')">
 
 	<s:states>
