--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -14,6 +14,7 @@
 			import flash.utils.setTimeout;
 			
 			import mx.binding.utils.BindingUtils;
+			import mx.core.UIComponentCachePolicy;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.vo.ResourceVO;
@@ -54,7 +55,6 @@
 				if (itemElement && contains(itemElement)) {
 					if (resourceVO && (itemElement is ListItemNotEmptyContent))
 					{
-						ListItemNotEmptyContent(itemElement).addEventListener(ListItemNotEmptyContent.ICON_ADDED, onContentIconAdded, false, 0, true);
 						itemElement.data = resourceVO;
 						return;
 					} else  {		// remove element -> add empty element
@@ -66,42 +66,11 @@
 				if (resourceVO) 
 				{
 					itemElement = new ListItemNotEmptyContent();
-					ListItemNotEmptyContent(itemElement).addEventListener(ListItemNotEmptyContent.ICON_ADDED, onContentIconAdded, false, 0, true);
 					itemElement.data = resourceVO;
 				} else {
-					removeSpinner();
 					itemElement = new ListItemEmptyContent();
 				}
 				this.addElement(itemElement);
-			}
-			
-			protected function spinner_creationCompleteHandler(event:FlexEvent):void
-			{
-				spinner.addEventListener(SpinningSmoothImage.SPINNING_STARTED, onSpinnerAnimStarted, false, 0, true);
-				spinner.rotateImage();
-			}
-			
-			private function onSpinnerAnimStarted(evt:Event):void
-			{
-				spinner.removeEventListener(SpinningSmoothImage.SPINNING_STARTED, onSpinnerAnimStarted);
-			}
-			
-			private function removeSpinner():void
-			{
-				spinner.stopRotateImage();
-				try 
-				{
-					groupBG.removeElement(spinner);
-				} catch(e:Error)
-				{
-				}
-			}
-			
-			private function onContentIconAdded(evt:Event):void
-			{
-				ListItemNotEmptyContent(itemElement).removeEventListener(ListItemNotEmptyContent.ICON_ADDED, onContentIconAdded);
-				
-				removeSpinner();
 			}
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
@@ -138,15 +107,13 @@
 			</s:fill>
 		</s:Rect>
 		
-		<resourceBrowserWindow:SpinningSmoothImage id="spinner" height="42" width="42"
-												   left="10" top="10"
-												   maintainAspectRatio="true"
-												   scaleContent="true" 
-												   smoothBitmapContent="true"
-												   cacheAsBitmap="true"
-												   source="@Embed('assets/spinner.png')"
-												   creationComplete="spinner_creationCompleteHandler(event)"/>
-
+		<s:HGroup id="spinnerContainer"
+				  height="42" width="42"
+				  left="10" top="10"
+				  horizontalAlign="center" verticalAlign="middle">
+			
+		</s:HGroup>
+		
 	</s:Group>
 	
 </s:ItemRenderer>
