--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/SpinnerPopupSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/SpinnerPopupSkin.mxml
@@ -2,6 +2,7 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx"
+		xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*" 
 		minWidth="600" minHeight="330" width="600" height="330">
 	<!-- host component -->
 	<fx:Metadata>
@@ -26,12 +27,15 @@
 	
 	<s:HGroup width="100%" height="100%" 
 			  verticalAlign="middle" horizontalAlign="center">
-		<mx:Image width="30" height="30" 
-				  smoothBitmapContent="true"
-				  source="@Embed('assets/spinner.swf')"
-				  scaleContent="true"
-				  maintainAspectRatio="true"
-				  cacheAsBitmap="true"/>
+		
+		<resourceBrowserWindow:SpinningSmoothImage id="spinner"
+										width="20" height="20" 
+				  						source="@Embed('assets/spinner.png')"
+										maintainAspectRatio="true"
+										scaleContent="true" 
+										smoothBitmapContent="true"
+										cachePolicy="on"
+										cacheAsBitmap="true"/>
 	</s:HGroup>
 	
 </s:SparkSkin>
