show spinner popup when creating resources list
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7028 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -78,6 +78,7 @@
 				creationCompleted = true;
 				
 				addContentElement();
+				this.dispatchEvent(new ResourceSelectorWindowEvent(ResourceSelectorWindowEvent.LIST_ITEM_CREATION_COMPLETE));
 			}
 			
 			protected function doubleClickHandler(event:MouseEvent):void
