--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/SpinnerPopupSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/SpinnerPopupSkin.mxml
@@ -25,7 +25,7 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:HGroup width="100%" height="100%" 
+	<s:VGroup width="100%" height="100%" 
 			  verticalAlign="middle" horizontalAlign="center">
 		
 		<resourceBrowserWindow:SpinningSmoothImage id="spinner"
@@ -36,6 +36,9 @@
 										smoothBitmapContent="true"
 										cachePolicy="on"
 										cacheAsBitmap="true"/>
-	</s:HGroup>
+		
+		<s:Label id="spinnerLabel" text="" textAlign="center" color="white" 
+				 fontWeight="normal" fontFamily="Arial" fontSize="12" />
+	</s:VGroup>
 	
 </s:SparkSkin>
