git-svn-id: http://svn.vdombox.ru/flextools/trunk@7031 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeBase.mxml
@@ -250,7 +250,7 @@
 			private function eventCompleleHandler(event : Event) : void
 			{
 				regExpValidator.source = valueField;
-				regExpValidator.property = "text";
+				regExpValidator.property = "value";
 				regExpValidator.required = false;
 				//regExpValidator.trigger = valueField;
 				
