--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -8,8 +8,16 @@
 	<fx:Script>
 		<![CDATA[
 			import flash.utils.flash_proxy;
+			
+			import mx.events.ValidationResultEvent;
+			
+			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
+			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 			[Bindable]
 			private var _value : String;
+			private var regExpValidator : AttributeValidator = new AttributeValidator();
+			private var permissionToSentNeed : Boolean = true;
+			private var regExpValidatorNeed : Boolean = false;
 
 			public function get value():String
 			{
@@ -21,19 +29,58 @@
 				_value = value;
 			}
 			
-			public function initChars(_interface : uint, reg : String) : void
+			public function initChars(_interface : uint, _attributeDescriptionVO : AttributeDescriptionVO) : void
 			{
 				lbl.maxChars = _interface;
-				/*if (reg.indexOf("d") != -1)
-					lbl.restrict = "0-9\\-";*/
+				
+				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
+				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
+				regExpValidator.validate();
+				
+				regExpValidatorNeed = true;
+			}
+			
+			private function eventCompleleHandler(event : Event) : void
+			{
+				if (regExpValidatorNeed)
+				{
+					regExpValidator.source = lbl;
+					regExpValidator.property = "text";
+					regExpValidator.required = false;
+					//regExpValidator.trigger = valueField;
+				
+					regExpValidator.triggerEvent = Event.CHANGE;
+				
+					regExpValidator.addEventListener(ValidationResultEvent.VALID, handleValid);
+					regExpValidator.addEventListener(ValidationResultEvent.INVALID, handleValid);
+					regExpValidator.validate();
+				}
+				else
+					regExpValidator = null;
+			}
+			
+			private function handleValid( eventObj:ValidationResultEvent ) : void 
+			{
+				if(eventObj.type==ValidationResultEvent.VALID)    
+					permissionToSentNeed = true;
+				else
+					permissionToSentNeed = false;
 			}
 			
 			private function changeHandler() : void
 			{
 				if (_value != lbl.text)
 				{
-					_value = lbl.text;
-					dispatchEvent( new Event( Event.CHANGE ));
+					if (permissionToSentNeed)
+					{
+						_value = lbl.text;
+						dispatchEvent( new Event( Event.CHANGE ));
+					}
+					else
+					{
+						lbl.text = _value;
+						regExpValidator.validate();
+					}
 				}
 			}
 			
@@ -54,7 +101,8 @@
 		
 		<s:TextInput id="lbl"
 					 text="{_value}" width="100%" height="100%"
-					 keyDown="keyDownEnterHandler(event)" focusOut="changeHandler()"/>
+					 keyDown="keyDownEnterHandler(event)" focusOut="changeHandler()"
+					 creationComplete="eventCompleleHandler(event)"/>
 	</s:Group>
 	
 </s:Group>
