--- a/IDE/v.02/common/src/net/vdombox/view/skins/AlertSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/AlertSkin.mxml
@@ -42,13 +42,13 @@
 					 fontSize="16" color="#FFFFFF" text="{hostComponent.text}"/>
 			
 			<s:HGroup height="29" width="100%" horizontalAlign="center" gap="40">
-				<mx:Button  id="noButton" height="100%" cornerRadius="14" 
+				<mx:Button  id="noButton" height="100%" cornerRadius="14" tabIndex="1"
 							fontSize="18" label="{hostComponent._noLabel}"
 							visible="{hostComponent.visibleNoButton}" includeInLayout="{hostComponent.visibleNoButton}"
-							click="hostComponent.btnClickHandler(Alert.NO)"/>
-				<mx:Button  id="yesButton" height="100%" cornerRadius="14"
+							click="hostComponent.btnClickHandler(Alert.NO)" keyDown="hostComponent.keyNoPush(event)"/>
+				<mx:Button  id="yesButton" height="100%" cornerRadius="14" tabIndex="2"
 							fontSize="18" icon="@Embed('net/vdombox/icons/Cancel.png')" label="{hostComponent._yesLabel}"
-							click="hostComponent.btnClickHandler(Alert.YES)"/>
+							click="hostComponent.btnClickHandler(Alert.YES)" keyDown="hostComponent.keyYesPush(event)"/>
 			</s:HGroup>
 		</s:VGroup>
 		
