git-svn-id: http://svn.vdombox.ru/flextools/trunk@7038 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
@@ -37,6 +37,8 @@
 					(resourceVO && prevResVO && resourceVO.id != prevResVO.id))
 				{
 					_iconRequested = false;
+				} else {
+					_iconRequested = true;
 				}
 				
 				setProperties();
