--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -66,7 +66,7 @@
 		</s:fill>
 	</s:Rect>
 	<mx:Text id="txt"/>
-	<s:ComboBox id="valueField" width="100%" height="100%"
+	<s:ComboBox id="valueField" width="100%" height="100%" textAlign="left"
 				change="changeHandler()" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.ComboBoxItemRenderer"/>
 	
 </s:Group>
