--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ResourceSelector.mxml
@@ -37,8 +37,8 @@
 				<s:SolidColor color="#FFFFFF"/>
 			</s:fill>
 		</s:Rect>
-		
-		<s:TextInput id="lbl"
+		 
+		<s:TextInput id="lbl" textAlign="left"
 					 text="Resources" editable="false" width="100%" height="100%"/>
 		
 	</s:Group>
