--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -99,7 +99,7 @@
 			</s:fill>
 		</s:Rect>
 		
-		<s:TextInput id="lbl"
+		<s:TextInput id="lbl" textAlign="left"
 					 text="{_value}" width="100%" height="100%"
 					 keyDown="keyDownEnterHandler(event)" focusOut="changeHandler()"
 					 creationComplete="eventCompleleHandler(event)"/>
